k8s/cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-httproute
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "hubble.lenovium.leonvdbeek.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
